--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/express": "^4.17.6",
     "@types/node": "^14.0.14",
     "@types/validator": "^13.1.0",
+    "sequelize-cli": "^6.1.0",
     "ts-node": "^8.10.2",
     "ts-node-dev": "^1.0.0-pre.50",
     "typescript": "^3.9.6"
