create credit card

--- a/.sequelizerc
+++ b/.sequelizerc
@@ -1,7 +1,7 @@
 const path = require('path');
 
 module.exports = {
-	config: path.resolve(__dirname, 'src', 'config', 'config.json'),
-	'migrations-path': path.resolve(__dirname, 'src', 'database', 'migrations')
+	config: path.resolve(__dirname, 'dist', 'config', 'config.js'),
+	'migrations-path': path.resolve(__dirname, 'dist', 'database', 'migrations')
 
 }
