--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "claudiuri <claudio.y07@gmail.com>",
   "license": "MIT",
   "scripts": {
+    "build": "tsc",
     "dev": "ts-node-dev --transpileOnly --ignore-watch node_modules src/server.ts"
   },
   "dependencies": {
